fixed finished movile mode

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </section>
       <div id="projectZIndex" class="projects show-categories fff">
         <div class="container">
-          <div class="box">
+          <div class="box box-show">
             <p class="project-description1">
               This is an application for the management of end-of-degree
               projects for students.
@@ -179,7 +179,7 @@
             <img src="asset/images/portar proyecto.png" />
             <span>Portal proyectos</span>
           </div>
-          <div class="box">
+          <div class="box box-show">
             <p class="project-description2">
               This application tries to solve the new problems posed by the
               current pandemic by allowing you to buy tickets for your trips
@@ -238,7 +238,7 @@
             <img src="asset/images/express_ticket.png" />
             <span>Express tickets</span>
           </div>
-          <div class="box">
+          <div class="box box-show">
             <p class="project-description3">
               This is a virtual store with which you can register your items
               with price, name and image. You can also manage the sales of items
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="container">
-          <div class="box">
+          <div class="box box-show">
             <p class="project-description4">
               This is a life-long todo list application with the addition that
               allows you to assign tasks to each moment of your day in such a
@@ -358,7 +358,7 @@
             <img src="asset/images/Todo list.png" />
             <span>Todo list</span>
           </div>
-          <div class="box">
+          <div class="box box-show">
             <p class="project-description5">
               As its name indicates, this is an application with which you will
               have multiple countdown which will allow you to be aware of events
@@ -417,12 +417,11 @@
             <img src="asset/images/Multiple coundows.png" />
             <span>Multiple coundows</span>
           </div>
-          <div class="box">
+          <div class="box box-show">
             <p class="project-description6">
               With this web application you will be able to place your food
               orders which will be registered and then they will appear in the
-              orders tab where you can edit or delete that order and if you are
-              satisfied with your order, proceed to pay.
+              orders tab.
             </p>
             <div class="project-buttons project-buttons-down">
               <div>
